2018-03-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wbmp.c (ReadWBMPImage): Fix blob I/O size validation to
	avoid use of uninitialized data. Fixes oss-fuzz 7047
	"graphicsmagick/coder_WBMP_fuzzer: Use-of-uninitialized-value in
	ReadWBMPImage". (Credit to OSS-Fuzz)

	* coders/wpg.c (ExtractPostscript): Allow non-Postscript content
	but force reading using the magick we already detected.  Also log
	the format that we detected.

	* coders/xcf.c (ReadOneLayer): Reject layer size of 0x0.  Fixes
	oss-fuzz 6636 "graphicsmagick/coder_XCF_fuzzer: Direct-leak in
	MagickMallocAligned". (Credit to OSS-Fuzz)
	(ReadXCFImage): Verify that seek offsets are within the bounds of
	the file data. Fixes oss-fuzz 6682
	"graphicsmagick/coder_XCF_fuzzer: Out-of-memory in
	graphicsmagick_coder_XCF_fuzzer". (Credit to OSS-Fuzz)

	* magick/pixel_cache.c (ModifyCache): Destroy CacheInfo if
	OpenCache() fails so it is not leaked.

	* coders/wpg.c (ExtractPostscript): Enforce that embedded file is
	a Postscript file.  Fixes oss-fuzz 7235
	"graphicsmagick/coder_WPG_fuzzer: Indirect-leak in MagickRealloc".
	This is indicated to be a regression. (Credit to OSS-Fuzz)

2018-03-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pict.c (ReadPICTImage): Check image pixel limits before
	allocating memory for tile.  Fixes oss-fuzz 7217
	"graphicsmagick/coder_PICT_fuzzer: Out-of-memory in
	graphicsmagick_coder_PICT_fuzzer".

2018-03-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pcd.c (ReadPCDImage): Add checks for EOF. Fixes oss-fuzz
	issue 7180 "graphicsmagick/coder_PCDS_fuzzer: Timeout in
	graphicsmagick_coder_PCDS_fuzzer".  (Credit to OSS-Fuzz)

2018-03-29  Greg Wolfe  <gregory.wolfe@kodakalaris.com>

	* coders/svg.c (SVGStartElement, SVGEndElement),
	magick/render.c (DrawImage): This changeset implements the SVG
	"use" element.  Graphical elements (e.g., "rect", "text", etc.)
	can be tagged with an identifier using 'id="identifier"' when